# mlt2

./: CMakeLists.txt
src/framework/: CMakeLists.txt
src/modules/glaxnimate/: CMakeLists.txt
src/modules/glaxnimate/glaxnimate/cmake/: README.md  misc.cmake  qt.cmake  testing.cmake
src/modules/glaxnimate/glaxnimate/cmake/modules/: FindIconv.cmake  FindImageQuant.cmake  FindLibav.cmake  FindMagic.cmake  FindPotrace.cmake  FindSDL2.cmake  FindcURL.cmake
src/modules/glaxnimate/glaxnimate/src/core/: application_info_generated.hpp
src/modules/glaxnimate/glaxnimate/src/core/io/aep/: cos.hpp  riff.hpp
src/modules/sdl/: consumer_sdl.c  consumer_sdl_audio.c  consumer_sdl_preview.c  consumer_sdl_still.c
src/modules/spatialaudio/: CMakeLists.txt  filter_ambisonic-decoder.cpp  filter_ambisonic-encoder.cpp
src/modules/vid.stab/: common.c  common.h  filter_deshake.cpp  filter_vidstab.cpp
src/modules/xml/: common.c  common.h
